# xtop

./: .gitignore  AGENTS.md  Makefile  README.md  nvidia.py  pyproject.toml  xtop.py
.github/: copilot-instructions.md
src/xtop/: __main__.py
src/xtop/backend/cpu/: apple.py  macos.py
src/xtop/backend/gpu/: __init__.py  jetson.py  mock.py  models.py  nvidia.py
src/xtop/backend/npu/: __init__.py  intel.py
src/xtop/frontend/: __init__.py  gpu.py  npu.py  tui.py  tui_app.py  tui_backends.py  tui_graphs.py  tui_layout.py  tui_widgets.py
src/xtop/xtopException/: __init__.py  xtopException.py
src/xtop/xtopUtil/: __init__.py  xtopUtil.py
tests/: test_gpu_monitoring.py  test_startup_paths.py
